# Audiobook-Generator

./: .gitignore  .sync-conflict-20260327-154656-TQEUIRX.gitignore  CONTRIBUTING.md  LICENSE  README.md  README.sync-conflict-20260327-154655-TQEUIRX.md  SECURITY.md  app_gradio.py  index.html  package-lock.json  package.json  startGradio.bat  startGradio.sh  start_setup_gradio.bat  start_setup_gradio.sh  tsconfig.json  vite.config.ts
.github/workflows/: build-qwentts-runtime.yml  release.yml
audiobook_generator/: base_plugin.py  base_subprocess_plugin.py  config.py  epub_processor.py  ffmpeg_wrapper.py  model_manager.py  payload_types.py  plugin_manager.py  tts_handler.py  utils.py
audiobook_generator/config/: __init__.py  defaults.py  models.py  paths.py
audiobook_generator/gradio_UI/: __init__.py  configuration_tab.py  demo_test_tab.py  dependencies_tab.py  epub_options_tab.py  generate_tab.py  models_tab.py  recovery_tab.py
audiobook_generator/plugins/: __init__.py  plugin_registry.json
audiobook_generator/plugins/kokoro/: __init__.py  plugin.py  synthesize_subprocess.py
audiobook_generator/plugins/mock/: __init__.py  plugin.py
audiobook_generator/plugins/qwen3tts/: plugin.py  plugin_0_6B.py  plugin_1_7B.py  requirements-qwen3tts.txt  synthesize_subprocess.py
audiobook_generator/plugins/vibevoice/: plugin.py  requirements-vibevoice.txt  synthesize_subprocess.py
audiobook_generator/plugins/xttsv2/: __init__.py  plugin.py  requirements-xttsv2.txt  synthesize_subprocess.py
prototype/kokoro-cli/: Cargo.toml  README.md
prototype/kokoro-cli/src/: chunker.rs  epub.rs  kokoro.rs  main.rs  merger.rs  recovery.rs
requirements/: requirements-base.txt  requirements-kokoro.txt
setup/: __init__.py  download_models.py  helpers.py  setup_gradio.py
setup/setup_helpers/: __init__.py  dependency_setup.py  download_utils.py  environment_utils.py  model_downloader.py  model_downloader.sync-conflict-20260327-154655-TQEUIRX.py  plugin_utils.py  system_utils.py  user_prompts.py
src/: main.ts  styles.css
src-tauri/: Cargo.toml  engine_registry.json  tauri.conf.json
src-tauri/assets/speakers/: it-male-narrator.json
src-tauri/capabilities/: default.json
src-tauri/examples/: test_book.rs  test_discovery.rs  test_kokoro.rs
src-tauri/icons/: icon.icns
src-tauri/patches/chatterbox/: README.md  bake_speaker_conds.py  bake_tokenizer.py  codec.cpp-local-changes.patch  gen_backbone_def.ps1  ggml-im2col-griddim-y.patch
src-tauri/plugins/: plugin_registry.json
src-tauri/src/: base_plugin.rs  base_subprocess_plugin.rs  chunker.rs  commands.rs  engines.rs  epub.rs  gpu_guard.rs  input.rs  job_object.rs  lib.rs  main.rs  merger.rs  model_manager.rs  payload_types.rs  plugin_manager.rs  recovery.rs  sidecars.rs  utils.rs  wizard.rs
src-tauri/src/config/: defaults.rs  mod.rs  models.rs  paths.rs
src-tauri/src/engines/: kokoro.rs
src-tauri/src/plugins/: mod.rs
src-tauri/src/plugins/chatterbox/: mod.rs  plugin.rs
src-tauri/src/plugins/kokoro/: mod.rs  plugin.rs
src-tauri/src/plugins/outetts/: mod.rs  plugin.rs
src-tauri/src/plugins/qwen3tts/: mod.rs  plugin.rs
src-tauri/src/plugins/vibevoice/: mod.rs  plugin.rs
src-tauri/src/plugins/voxcpm2/: mod.rs  plugin.rs
src-tauri/src/plugins/xttsv2/: mod.rs  plugin.rs
src-tauri/test_books/: perrault.epub
src/frontend/: agents.ts  configuration.ts  demo.ts  engine-strip.ts  epub-options.ts  generate.ts  helpers.ts  models.ts  recovery.ts  sidebar.ts  state.ts  types.ts  wizard.ts
test_files/: test_ebook_cn.epub  test_ebook_en.epub  test_ebook_es.epub  test_ebook_fr.epub  test_ebook_it.epub  test_ebook_it.epub.originale  test_ebook_ja.epub  test_ebook_ru.epub
