[package]
name = "audiobook-generator"
version = "0.1.0"
description = "Audiobook Generator desktop app (Tauri + llama.cpp + native Rust)"
authors = ["Carlo"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[lib]
name = "audiobook_generator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.5", features = [] }
tauri-plugin-dialog = "2.2"
tauri-plugin-fs = "2.2"
tauri-plugin-http = { version = "2.2", features = ["unsafe-headers"] }
tauri-plugin-shell = "2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = 3
strip = true
