[package]
name = "audiobook-generator"
version = "0.1.0"
description = "Audiobook Generator desktop app (Tauri + llama.cpp + native Rust)"
authors = ["Carlo"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[lib]
name = "audiobook_generator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.5", features = [] }
tauri-plugin-dialog = "2.2"
tauri-plugin-fs = "2.2"
tauri-plugin-http = { version = "2.2", features = ["unsafe-headers"] }
tauri-plugin-shell = "2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
futures = "0.3"
regex = "1.10"
hound = "3.5"
# EPUB parsing (zip + xml, both MIT)
zip = { version = "2.2", default-features = false, features = ["deflate"] }
quick-xml = { version = "0.36", features = ["serialize"] }
# Kokoro TTS (uses ort 2.0 RC internally)
# We disable the default `g2p-espeak` feature for now: it requires CMake
# and a C/C++ toolchain to build bundled espeak-ng.
kokoro-en = { version = "0.1", default-features = false }
async-trait = "0.1"
dirs = "5"
# ORT CUDA / cuDNN support is enabled at runtime by placing the
# vendored DLLs next to the binary. The Kokoro engine searches for
# them on PATH (which we prepend in the engine's load()).

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = 3
strip = true
