[package]
name = "audiobook-generator"
version = "0.1.1"
description = "Audiobook Generator desktop app (Tauri + llama.cpp + native Rust)"
authors = ["Carlo"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[lib]
name = "audiobook_generator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.5", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.2"
tauri-plugin-fs = "2.2"
tauri-plugin-http = { version = "2.2", features = ["unsafe-headers"] }
tauri-plugin-shell = "2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
futures = "0.3"
regex = "1.10"
hound = "3.5"
# EPUB parsing (zip + xml, both MIT)
zip = { version = "2.2", default-features = false, features = ["deflate"] }
quick-xml = { version = "0.36", features = ["serialize"] }
async-trait = "0.1"
dirs = "5"
which = "7"
sysinfo = "0.33"
num_cpus = "1"
reqwest = { version = "0.12", features = ["stream", "blocking", "json"] }
flate2 = "1"
tar = "0.4"
# ORT CUDA / cuDNN support is enabled at runtime by placing the
# vendored DLLs next to the binary. The Kokoro engine searches for
# them on PATH (which we prepend in the engine's load()).
ort = { version = "2.0.0-rc.12" }
ndarray = "0.16"
ureq = "3"

# Kokoro TTS (retired engine): no source file references `kokoro_en`
# anymore, but keeping the crate on Windows/Linux preserves the `cuda`
# and `coreml` feature set of `ort` used by the OuteTTS DAC decoder.
# It is excluded on macOS because `ort` provides no CUDA (cu12)
# prebuilt binaries for Apple targets, which breaks the build.
[target.'cfg(not(target_os = "macos"))'.dependencies]
kokoro-en = { version = "0.1", default-features = false }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = 3
strip = true
